--- a/settings.html
+++ b/settings.html
@@ -17,17 +17,24 @@
 </head>
 <body class="min-h-screen flex bg-gradient-to-br from-indigo-800 to-blue-900 text-white">
 
-  <!-- Sidebar -->
-  <aside class="w-20 bg-black bg-opacity-40 p-4 flex flex-col items-center space-y-6 text-white">
-    <div class="hover:text-indigo-300 cursor-pointer" title="Dashboard">
-      <i data-feather="home"></i>
-    </div>
-    <div class="hover:text-indigo-300 cursor-pointer" title="Settings">
-      <i data-feather="settings"></i>
-    </div>
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script>feather.replace();</script>
-  </aside>
+   <!-- Sidebar -->
+    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
+      <div>
+        <div class="flex justify-center items-center mb-4">
+          <i data-feather="menu" class="cursor-pointer"></i>
+        </div>
+        <div class="flex flex-col space-y-6 mt-96">
+          <a href="index.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="home"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
+          </a>
+        </div>
+      </div>
+      <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
+        <i data-feather="settings"></i>
+        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
+      </a>
+    </aside>
 
   <!-- Settings Panel -->
   <div class="flex-1 p-10">
