--- a/settings.html
+++ b/settings.html
@@ -24,11 +24,27 @@
         <div class="flex justify-center items-center mb-4">
           <i data-feather="menu" class="cursor-pointer"></i>
         </div>
-        <div class="flex flex-col space-y-6 mt-96">
-          <a href="index.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+       <div class="flex flex-col space-y-6 mt-96">
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
             <i data-feather="home"></i>
             <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
-          </a>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="zap"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="users"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="bar-chart-2"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
+          </div>
+          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
+            <i data-feather="book-open"></i>
+            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
+          </div>
         </div>
       </div>
       <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
