--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Settings</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/feather-icons"></script>
   <script>
     function openTab(tabId) {
       const tabs = document.querySelectorAll('.tab-content');
@@ -18,40 +17,22 @@
 </head>
 <body class="min-h-screen flex bg-gradient-to-br from-indigo-800 to-blue-900 text-white">
 
-   <!-- Sidebar -->
-    <aside class="w-20 text-white flex flex-col py-6 space-y-6 fixed top-0 left-0 h-full z-40 justify-between" style="background-color: #1F395C;">
-      <div>
-        <div class="flex justify-center items-center mb-4">
-          <i data-feather="menu" class="cursor-pointer"></i>
-        </div>
-       <div class="flex flex-col space-y-6 mt-96">
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-            <i data-feather="home"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Home</span>
-          </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-            <i data-feather="zap"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Apps</span>
-          </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-            <i data-feather="users"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Team</span>
-          </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-            <i data-feather="bar-chart-2"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Stats</span>
-          </div>
-          <div class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative">
-            <i data-feather="book-open"></i>
-            <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Docs</span>
-          </div>
-        </div>
-      </div>
-      <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
-        <i data-feather="settings"></i>
-        <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
-      </a>
-    </aside>
+  <!-- Sidebar -->
+  <aside class="w-20 bg-black bg-opacity-40 p-4 flex flex-col items-center space-y-6 text-white">
+    <div class="hover:text-indigo-300 cursor-pointer" title="Dashboard">
+      <i data-feather="home"></i>
+    </div>
+    <div class="hover:text-indigo-300 cursor-pointer" title="Settings">
+      <i data-feather="settings"></i>
+    </div>
+    <script src="https://unpkg.com/feather-icons"></script>
+    <script>feather.replace();</script>
+  </aside>
+
+  <!-- Settings Panel -->
+  <div class="flex-1 p-10">
+    <div class="bg-white text-black p-8 rounded-xl max-w-3xl mx-auto shadow space-y-6">
+      <h1 class="text-2xl font-bold text-center">Settings</h1>
 
       <!-- Tab Navigation -->
       <div class="flex space-x-4 border-b pb-2 mb-4 justify-center">
@@ -156,11 +137,8 @@
       <div class="pt-6 flex justify-end space-x-4">
         <button class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400">Cancel</button>
         <button class="px-4 py-2 bg-indigo-600 text-white rounded hover:bg-indigo-700">Save Settings</button>
-       </div>
       </div>
- </div>
-  <script>feather.replace();</script>
-  </body>
-
+    </div>
+  </div>
+</body>
 </html>
-
