--- a/settings.html
+++ b/settings.html
@@ -50,7 +50,13 @@
       </a>
     </div>
   </div>
-    </aside>
+
+  <!-- Settings Icon -->
+  <a href="settings.html" class="group flex justify-center items-center px-2 cursor-pointer hover:text-black font-bold relative mb-6">
+    <i data-feather="settings"></i>
+    <span class="absolute left-full ml-2 w-max opacity-0 group-hover:opacity-100 transition-opacity text-black font-bold">Settings</span>
+  </a>
+</aside>
   <!-- Settings Panel -->
   <div class="flex-1 p-10">
     <div class="bg-white text-black p-8 rounded-xl max-w-3xl mx-auto shadow space-y-6">
